Skip to content

vout filter (...) crash with dvd menu button

Program received signal SIGSEGV, Segmentation fault.
[Switching to thread 2384.0xc94]
0x77600e38 in KERNEL32!CreateJobObjectA ()
   from C:\Windows\syswow64\kernel32.dll
(gdb) Error: dll starting at 0x777d0000 not found.
Error: dll starting at 0x775f0000 not found.
Error: dll starting at 0x777d0000 not found.
Error: dll starting at 0x77700000 not found.
bt
[#0](https://code.videolan.org/videolan/vlc/-/issues/0)  0x77600e38 in KERNEL32!CreateJobObjectA ()
   from C:\Windows\syswow64\kernel32.dll
[#1](https://code.videolan.org/videolan/vlc/-/issues/1)  0x6a5b9052 in vlc_mutex_lock (p_mutex=0x0) at misc/threads.c:371
Backtrace stopped: frame did not save the PC
Call stack:
77600E38  kernel32.dll:77600E38  InterlockedCompareExchange
6A594B0F  libvlccore.dll:6A594B0F  UpdateSPU  vout_subpictures.c:1738

6A594CD1  libvlccore.dll:6A594CD1  CropCallback  vout_subpictures.c:1778

6A5C8067  libvlccore.dll:6A5C8067  var_SetChecked  variables.c:747

6A5C833E  libvlccore.dll:6A5C833E  __var_Set  variables.c:787

6F442032  libdvdnav_plugin.dll:6F442032  ButtonUpdate  dvdnav.c:1033

6F444C7F  libdvdnav_plugin.dll:6F444C7F  Demux  dvdnav.c:1059

6A580328  libvlccore.dll:6A580328  MainLoop  input.c:578

6A58276E  libvlccore.dll:6A58276E  Run  input.c:517

6A5B8B31  libvlccore.dll:6A5B8B31  thread_entry  threads.c:1002

6A5B8E2A  libvlccore.dll:6A5B8E2A  vlc_entry  threads.c:688

76B92CCE  msvcrt.dll:76B92CCE  wcstombs_s
76B92DEB  msvcrt.dll:76B92DEB  _beginthreadex
7767E3F3  kernel32.dll:7767E3F3  BaseThreadInitThunk
77B1CFED  ntdll.dll:77B1CFED  RtlCreateUserProcess
77B1D1FF  ntdll.dll:77B1D1FF  RtlCreateProcessParameters
Call stack:
76BE4AAE  msvcrt.dll:76BE4AAE  _assert
6A5B90EE  libvlccore.dll:6A5B90EE  vlc_mutex_lock  threads.c:373

6A594B0F  libvlccore.dll:6A594B0F  UpdateSPU  vout_subpictures.c:1738

6A594CD1  libvlccore.dll:6A594CD1  CropCallback  vout_subpictures.c:1778

6A5C8067  libvlccore.dll:6A5C8067  var_SetChecked  variables.c:747

6A5C833E  libvlccore.dll:6A5C833E  __var_Set  variables.c:787

6F442032  libdvdnav_plugin.dll:6F442032  ButtonUpdate  dvdnav.c:1033

6F444C7F  libdvdnav_plugin.dll:6F444C7F  Demux  dvdnav.c:1059

6A580328  libvlccore.dll:6A580328  MainLoop  input.c:578

6A58276E  libvlccore.dll:6A58276E  Run  input.c:517

6A5B8B31  libvlccore.dll:6A5B8B31  thread_entry  threads.c:1002

6A5B8E2A  libvlccore.dll:6A5B8E2A  vlc_entry  threads.c:688

76B92CCE  msvcrt.dll:76B92CCE  wcstombs_s
76B92DEB  msvcrt.dll:76B92DEB  _beginthreadex
7767E3F3  kernel32.dll:7767E3F3  BaseThreadInitThunk
77B1CFED  ntdll.dll:77B1CFED  RtlCreateUserProcess
77B1D1FF  ntdll.dll:77B1D1FF  RtlCreateProcessParameters

Steps to reproduce:

  1. open dvd disc with menu

  2. click a menu to start dvd playback

  3. check Magnification/Zoom vout filter, uncheck, click dvd menu button at the MI controls

  4. (Noticed dvd menu won't work...)

  5. check Magnification/Zoom vout filter and click dvd menu buttons at the MI controls (boom!)

Same happened with Transform (with Assertion failed) misc/threads.c line 381

Tried with other vout filters same thing happened

Tested on a build from [730eefea]

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information