Fixed spu_t attach/detach sequence.

It should fix #2622 (segfault with vout-filter).